refactor: Enhance data transfer logic in FileReceiver and ReceiverOptimized for improved clarity and performance